Nick-Pillsbury/Multi-Cluster_Cilium_ClusterMesh_With_Network_Policies/block-cluster-a-to-cluster-b.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: block-cluster-a-to-cluster-b
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.cilium.k8s.policy.cluster: cluster-a
